fix a bug that ticket layout collapsed

--- a/public/sass/_content.scss
+++ b/public/sass/_content.scss
@@ -12,9 +12,13 @@
 	border: 1px solid $gray-lighter;
 }
 
+.btn-panel{
+	margin-bottom: 15px;
+}
+
 .btn-save{
 	width: 200px;
-	margin-bottom: 15px;
+	margin-right: 20px;
 }
 
 .list-block{
@@ -129,7 +133,7 @@ table.ticket-list{
 	// チケット右部分
 	.ticket-body{
 		padding: 5px;
-		width: $ticket-width - $ticket-icon-width;
+		width: $ticket-width - $ticket-icon-width - 5;
 
 		// チケットのキー
 		.ticket-key{
